# Graplix_perso

pii_extraction_system/: .env.development  .env.example  .env.staging  .gitignore  AGENT_EXECUTION_PLAN.md  API_KEY_CONFIGURATION.md  Dockerfile  ENTERPRISE_SCALING_DEMO.md  IMPORT_FIX.md  LLM_OCR_README.md  LOGGER_FIX.md  LOGGING_IMPROVEMENTS.md  MODEL_FIXES_SUMMARY.md  Makefile  PDF_LLM_OCR_SOLUTION.md  PHASE1_NAN_FIX.md  README.md  S3_INTEGRATION_ARCHITECTURE.md  SCALABILITY_ANALYSIS_10K.md  SETUP_STATUS.md  comprehensive_llm_test.py  comprehensive_llm_test_results.json  coordination_monitor.py  data_files_inventory.md  debug_form_ocr.py  debug_llm_service.py  debug_ocr_issue.py  docker-compose.yml  download_models.py  enable_llm_ocr.py  enhanced_llm_test.py  enhanced_llm_test_results.json  french_ocr_diagnosis.md  jpg_ocr_improvements.md  load_env.py  medical_form_llm_results.json  ocr_fix_summary.md  ocr_integration_summary.md  pii_detection_explained.md  pyproject.toml  (+16 more)
pii_extraction_system/.claude/: config.json
pii_extraction_system/.github/workflows/: ci-cd.yml
pii_extraction_system/data/: run_history.db
pii_extraction_system/demos/: demo.py  demo_llm_ocr.py
pii_extraction_system/docs/: AGENT5_CICD_DELIVERABLES.md  API_DOCUMENTATION.md  BUDGET_ENFORCEMENT_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  DEVOPS_RUNBOOK.md  Metadata tagging.md  PHASE1_IMPLEMENTATION_SUMMARY.md  Performance calculation.md  SYSTEM_ARCHITECTURE.md  TROUBLESHOOTING.md  USER_GUIDE.md  cost.md
pii_extraction_system/infrastructure/terraform/: main.tf
pii_extraction_system/monitoring/: prometheus.yml
pii_extraction_system/reports/: agent6_validation_report.json
pii_extraction_system/scripts/: deploy.sh
pii_extraction_system/scripts/backup/: automated_backup.sh  backup_manager.py  disaster_recovery.sh
pii_extraction_system/src/: __init__.py  advanced_pii_system.py
pii_extraction_system/src/core/: __init__.py  config.py  environment_manager.py  error_handling.py  ground_truth_validation.py  health_checks.py  logging_config.py  performance_monitor.py  pipeline.py
pii_extraction_system/src/dashboard/: __init__.py  main.py
pii_extraction_system/src/data/: llm_usage.db
pii_extraction_system/src/data_pipeline/: __init__.py  batch_processor.py  data_loader.py  demo_usage.py  experiment_tracker.py  format_handlers.py  ground_truth_manager.py  metadata_manager.py
pii_extraction_system/src/database/: document_store.py
pii_extraction_system/src/deployment/: sagemaker_config.py
pii_extraction_system/src/extractors/: __init__.py  base.py  confidence_assessor.py  contextual_pii_pipeline.py  dictionary_extractor.py  evaluation.py  (+10 more)
pii_extraction_system/testing/: demo_budget_enforcement.py  test_budget_enforcement.py
pii_extraction_system/tests/: __init__.py  conftest.py  test_runner.py  validate_system.py
(+134 files in other folders)
